# fractal-one

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PATENT_COVER_SHEET.md  PATENT_PRIOR_ART_ANALYSIS.md  PROCUREMENT_READY.md  README.md  SECURITY.md  backtest_analysis.md  backtest_report.md  backtest_results.json  backtest_verdict.txt  deny.toml  justfile
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
dag-cli/: Cargo.toml  README.md
dag-cli/src/: lib.rs  main.rs
demo/: dashboard.html
deploy/config/: default.toml
deploy/grafana/: fractal-dashboard.json
deploy/helm/fractal/: Chart.yaml  values.yaml
deploy/helm/fractal/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
deploy/prometheus/: alerts.yaml
docs/: AXIS_P_DEV_PLAN.md  CISO_SECURITY_ASSESSMENT.md  EXECUTIVE_SUMMARY.md  ORACLE_TECH_SPEC.md  STIG_COMPLIANCE.md  TECHNICAL_OVERVIEW.md  THERMOCEPTION_SPEC.md  THREAT_MODEL.md
examples/: agi_demo.rs  b_prime_experiment.rs  counterexample.rs  coupling_experiment.rs  fisher_theorem.rs  sensorium_coupling.rs
fractal_agent/: Cargo.toml
fractal_agent/src/: claude.rs  config.rs  display.rs  lib.rs  main.rs  metrics.rs  runner.rs  state.rs
neuro_link/: Cargo.toml
neuro_link/src/: lib.rs
scripts/: generate-sbom.sh
src/: animacy.rs  archon_gpu.rs  audit.rs  auth.rs  auth_hardened.rs  baseline.rs  calibration.rs  chaos.rs  command_module.rs  context_fingerprint.rs  cortex.rs  domains.rs  drift.rs  dynamics_characterization.rs  entropy_storm.rs  error.rs  fractal_lens.rs  heart.rs  lib.rs  llm_providers.rs  main.rs  master.rs  memory_sink.rs  metrics.rs  momentum_gate.rs  neuro_link.rs  noci_pulse.rs  nociception.rs  observations.rs  redblue.rs  sensorium.rs  server.rs  shepherd.rs  sitrep.rs  spectral.rs  stats.rs  text_normalize.rs  thermoception.rs  threshold_detector.rs  time.rs  (+2 more)
src/agi_core/: mod.rs
src/alignment/: corrigibility.rs  deference.rs  mod.rs  uncertainty.rs  values.rs
src/animacy/: classifier.rs  detection.rs  entity.rs  field.rs  mod.rs  phase.rs  physics.rs  trajectory.rs
src/axis_h/: mod.rs
src/axis_p/: adversarial.rs  capacity.rs  controls.rs  counterfactual.rs  decay.rs  injector.rs  marker.rs  mi.rs  mod.rs  probe.rs  report.rs  target.rs  transportability.rs
src/cognition/: abstraction.rs  counterfactual.rs  mod.rs  pattern.rs
src/containment/: boundary.rs  intent.rs  mod.rs  operator.rs  resistance.rs
src/coupling/: archive.rs  b_prime.rs  fisher_projection.rs  mod.rs  negative_result.rs  no_go.rs
src/export/: cef.rs  json.rs  mod.rs  ocsf.rs
src/forecasting/: evaluation.rs  factor.rs  mod.rs  salience.rs  tracker.rs
src/grounding/: causal.rs  mod.rs  telemetry.rs  temporal.rs
src/orchestration/: agent.rs  conductor.rs  consensus.rs  mod.rs
src/qualia/: auditory.rs  mod.rs  operator.rs  stt.rs  visual.rs
src/tice/: crux.rs  graph.rs  metrics.rs  mod.rs  noci_bridge.rs  predictions.rs  propagator.rs  representations.rs
tests/: TEST_PLAN.md  ablation.rs  integration.rs
