[package]
name = "dag-cli"
version = "0.1.0"
edition = "2021"
description = "Lightweight CLI for DAG validation, cycle detection, and topological sorting"
license = "Unlicense"
repository = "https://github.com/aphoticshaman/fractal-one"
keywords = ["dag", "graph", "cycle-detection", "topological-sort", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "dag_cli"
path = "src/lib.rs"

[[bin]]
name = "dag"
path = "src/main.rs"

[dependencies]
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"
