# ═══════════════════════════════════════════════════════════════════════════════
# FRACTAL AGENT — Claude API Wrapper with Cognitive Monitoring
# ═══════════════════════════════════════════════════════════════════════════════
# Conversational CLI agent with thermoception, nociception, and sensorium
# integration for autonomous cognitive health management.
# ═══════════════════════════════════════════════════════════════════════════════

[package]
name = "fractal_agent"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "Claude API wrapper with cognitive monitoring"
repository = "https://github.com/aphoticshaman/fractal-one"

[[bin]]
name = "fractal_agent"
path = "src/main.rs"

[dependencies]
# Core fractal dependency
fractal = { path = ".." }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for Claude API
reqwest = { version = "0.11", features = ["json"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal UI
colored = "2.0"
indicatif = "0.17"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config/state file paths
dirs = "5.0"

# UUID for session IDs
uuid = { version = "1.0", features = ["v4"] }
